Adicionado header, main e footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<form>
-		<input type="text" name="" placeholder="Nome">
-		<input type="password" name="" placeholder="Senha">
-	</form>
+	<header>
+		<form>
+			<input type="text" name="" placeholder="Nome">
+			<input type="password" name="" placeholder="Senha">
+		</form>
+	</header>
+	<main>
+		
+	</main>
+	<footer>
+		
+	</footer>
 </body>
 </html>
